--- a/dir/depression/style.css
+++ b/dir/depression/style.css
@@ -1,22 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Russo+One&display=swap');
 
-body {
-background-color: black;
-  margin: 0;
-  padding: 0;
+html {
+  scroll-behavior: smooth;
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  z-index: 1;
+body {
+overflow: hidden;
+cursor: crosshair;
+margin: 0;
+-webkit-user-select: none; /* Für Webkit-Browser */
+-moz-user-select: none; /* Für Firefox */
+-ms-user-select: none; /* Für Internet Explorer und Microsoft Edge */
+user-select: none; /* Standard */
 }
 
 h1 {
+    background-image: url(images/back-img.jpg);
+    background-size: cover;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-family: 'Permanent Marker', cursive;
+    font-family: 'Russo One', sans-serif;
+    font-size: 300px;
+    display: flex;
+    justify-content: center;
+    transform: translateZ(-5px) scale(1.5);
+}
+
+h2 {
   background-image: url(images/back-img.jpg);
   background-size: cover;
   background-clip: text;
@@ -24,6 +36,56 @@ h1 {
   color: transparent;
   font-family: 'Permanent Marker', cursive;
   font-family: 'Russo One', sans-serif;
-  font-size: 200px;
-  user-select: none;
+  font-size: 100px;
+  display: flex;
+  justify-content: center;
+  padding-top: 0px;
+  transform: translateZ(-10px) scale(2);
+  z-index: 1;
+  text-align: center;
+  margin-bottom: 20px; /* Neuer Code: Fügt einen Abstand zwischen h2 und text-content hinzu */
+}
+
+
+.wrapper {
+  position: relative;
+  background-color: black;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  perspective: 10px;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE, Edge */
+  min-height: 100vh; /* Mindesthöhe des .wrapper auf 100% der Viewport-Höhe */
+}
+
+.wrapper::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
+.bottom-img {
+  position: absolute;
+  height: 120%;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
+  transform: translateZ(-20px) scale(3);
+}
+
+.bottom-img-before {
+  position: absolute;
+  height: 120%;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
+  transform: translateZ(-20px) scale(3);
+  filter: invert(100%);
+}
+
+.text-content {
+  position: absolute;
+  top: 2500px;
+  left: 10px;
+  font-size: 18px;
+  color: white;
+  transform: translateZ(-20px) scale(3);
 }
