--- a/dir/depression/style.css
+++ b/dir/depression/style.css
@@ -83,9 +83,12 @@ h2 {
 
 .text-content {
   position: absolute;
-  top: 2500px;
-  left: 10px;
+  top: 1890px;
+  bottom: 0;
+  margin: 0;
+  left: 2px;
   font-size: 18px;
   color: white;
   transform: translateZ(-20px) scale(3);
+  width: 40%;
 }
